# tts

./: .gitignore  README.md
docs/: run.py
scripts/: clean_blocklist.py
src/: api.py  app.py  config.py  db.py  mod.py  pyproject.toml  secrets_util.py  setup.py  sfx.py  tts.py  util.py  voice_fx.py
src/public/: api.js  index.html  main.js
src/templates/: config.yaml.example  mod_blocklist.txt.example  secrets.yaml.example
tests/: test_mod.py
todo/393e/: meta.json
todo/4770/: meta.json
todo/7033/: meta.json
todo/8ffd/: meta.json
