[project]
name = "tts"
version = "0.1"
description = "TTS service - Voice generation with Piper and Kokoro backends"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0.0",
    "itsdangerous>=2.2.0",
    "piper-tts>=1.2.0",
    "jupyter>=1.1.0",
    "openai-whisper>=20240930",
    "pyjwt>=2.9.0",
    "requests>=2.32.0",
    "cachetools>=5.5.0",
    "kokoro>=0.9.4",
    "soundfile>=0.13.0",
    "pedalboard>=0.9.22",
    "echo-common",
]

[tool.uv]
package = false

[tool.uv.sources]
echo-common = { git = "ssh://git@github.com/ramonlabs/echo.git", subdirectory = "services/common" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
files = ["."]
ignore_missing_imports = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tts-venv/"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
